--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "noEmit": true,
+    "noImplicitAny": true,
     "jsx": "preserve"
   },
   "include": ["src"]
