--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "gatsby-plugin-offline": "^2.2.4",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sharp": "^2.2.9",
-    "gatsby-plugin-tslint": "0.0.2",
     "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-source-filesystem": "^2.1.8",
     "gatsby-transformer-json": "^2.2.2",
@@ -20,19 +19,21 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "@types/node": "^12.7.1",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.8.5",
     "@types/react-helmet": "^5.0.9",
+    "@types/styled-components": "^4.1.18",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "prettier": "^1.18.2",
-    "tslint": "^5.18.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-loader": "^3.5.4",
-    "tslint-plugin-prettier": "^2.0.1",
-    "tslint-react": "^4.0.0",
     "typescript": "^3.5.3"
   },
   "keywords": [
@@ -44,8 +45,7 @@
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
-    "serve": "gatsby serve",
-    "link": "tslint --project ."
+    "serve": "gatsby serve"
   },
   "repository": {
     "type": "git",
