--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@types/react-dom": "^16.8.5",
     "@types/react-helmet": "^5.0.9",
     "@types/styled-components": "^4.1.18",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
@@ -45,7 +47,8 @@
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "lint": "eslint . --ext .tsx,.ts"
   },
   "repository": {
     "type": "git",
