--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
   "root": true,
+  "env": {
+    "browser": true
+  },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "sourceType": "module",
