--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
+    "d3": "^5.9.7",
     "gatsby": "^2.13.50",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-manifest": "^2.2.4",
@@ -24,6 +25,7 @@
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
+    "@types/d3": "^5.7.2",
     "@types/node": "^12.7.1",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.8.5",
