--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "author": "Pavel Růžička <hello@pavelruzicka.com>",
   "dependencies": {
     "axios": "^0.19.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.13.50",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-offline": "^2.2.4",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-transformer-json": "^2.2.2",
     "gatsby-transformer-sharp": "^2.2.5",
