--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "f2standings",
   "private": true,
   "description": "Formula 2 Standings",
-  "version": "0.1.0",
-  "author": "Pavel Růžička <hello@pavelruzicka.com>",
+  "version": "1.0.0",
+  "author": "Pavel Růžička <hello@pavelruzicka.com>, Christian Ruigrok <christian@ruigrok.info>",
   "dependencies": {
     "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
