--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "d3": "^5.9.7",
     "gatsby": "^2.13.50",
     "gatsby-image": "^2.2.8",
+    "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-gtag": "^1.0.11",
     "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-offline": "^2.2.4",
