--- a/package.json
+++ b/package.json
@@ -7,41 +7,45 @@
   "dependencies": {
     "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
-    "d3": "^5.9.7",
-    "gatsby": "^2.13.50",
-    "gatsby-image": "^2.2.8",
+    "d3": "^5.12.0",
+    "gatsby": "^2.17.13",
+    "gatsby-image": "^2.2.32",
     "gatsby-plugin-google-adsense": "^1.1.3",
-    "gatsby-plugin-google-analytics": "^2.1.10",
-    "gatsby-plugin-manifest": "^2.2.4",
-    "gatsby-plugin-offline": "^2.2.4",
-    "gatsby-plugin-react-helmet": "^3.1.3",
-    "gatsby-plugin-styled-components": "^3.1.2",
-    "gatsby-plugin-typescript": "^2.1.2",
-    "gatsby-transformer-json": "^2.2.2",
+    "gatsby-plugin-google-analytics": "^2.1.26",
+    "gatsby-plugin-manifest": "^2.2.27",
+    "gatsby-plugin-offline": "^3.0.20",
+    "gatsby-plugin-react-helmet": "^3.1.14",
+    "gatsby-plugin-styled-components": "^3.1.12",
+    "gatsby-plugin-typescript": "^2.1.17",
+    "gatsby-transformer-json": "^2.2.17",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-hanger": "^2.1.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-hanger": "^2.1.3",
     "react-helmet": "^5.2.1",
-    "styled-components": "^4.3.2",
+    "styled-components": "^4.4.1",
     "styled-normalize": "^8.0.6"
   },
   "devDependencies": {
     "@types/d3": "^5.7.2",
-    "@types/node": "^12.7.1",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.8.5",
-    "@types/react-helmet": "^5.0.9",
-    "@types/styled-components": "^4.1.18",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "prettier": "^1.18.2",
-    "typescript": "^3.5.3"
+    "@types/eslint": "^6.1.3",
+    "@types/eslint-plugin-prettier": "^2.2.0",
+    "@types/node": "^12.12.7",
+    "@types/prettier": "^1.18.3",
+    "@types/prop-types": "^15.7.3",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-helmet": "^5.0.14",
+    "@types/styled-components": "^4.4.0",
+    "@typescript-eslint/eslint-plugin": "^2.7.0",
+    "@typescript-eslint/parser": "^2.7.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.2.0",
+    "prettier": "^1.19.1",
+    "typescript": "^3.7.2"
   },
   "keywords": [
     "gatsby"
